stuff works i guess

--- a/public/index.html
+++ b/public/index.html
@@ -20,76 +20,78 @@
 			<header id="header">
 				<div class="content">
 					<h1><a href="#">Vysor</a></h1>
-					<p>Your Android in Chrome</p>
+					<p>A window to your Android</p>
+					<h5>Someone is trying to share their Android screen with you.</h5>
+					<h5>Download the app and refresh this page to connect.</h5>
 					<ul class="actions">
-						<li><a href="#" class="button special icon fa-download">Download</a></li>
-						<li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li>
+						<li><a href="https://chrome.google.com/webstore/detail/vysor-beta/gidgenkbbabolejbgbpnhbimgjbffefm?authuser=1" class="button special icon fa-download">Download</a></li>
+            <!-- <li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li> -->
 					</ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
 			</header>
 
 		<!-- One -->
-			<section id="one" class="wrapper style2 special">
-				<header class="major">
-					<h2>Sed ipsum magna lorem tempus amet<br />
-					vehicula et gravida elementum</h2>
-				</header>
-				<ul class="icons major">
-					<li><span class="icon fa-camera-retro"><span class="label">Shoot</span></span></li>
-					<li><span class="icon fa-refresh"><span class="label">Process</span></span></li>
-					<li><span class="icon fa-cloud"><span class="label">Upload</span></span></li>
-				</ul>
-			</section>
+      <!-- <section id="one" class="wrapper style2 special">
+        <header class="major">
+          <h2>Sed ipsum magna lorem tempus amet<br />
+          vehicula et gravida elementum</h2>
+        </header>
+        <ul class="icons major">
+          <li><span class="icon fa-camera-retro"><span class="label">Shoot</span></span></li>
+          <li><span class="icon fa-refresh"><span class="label">Process</span></span></li>
+          <li><span class="icon fa-cloud"><span class="label">Upload</span></span></li>
+        </ul>
+      </section> -->
 
 		<!-- Two -->
-			<section id="two" class="wrapper">
-				<div class="inner alt">
-					<section class="spotlight">
-						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Magna sed ultrices</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/pic02.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Ultrices nullam aliquam</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Aliquam sed magna</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
-						</div>
-					</section>
-					<section class="special">
-						<ul class="icons labeled">
-							<li><span class="icon fa-camera-retro"><span class="label">Ipsum lorem accumsan</span></span></li>
-							<li><span class="icon fa-refresh"><span class="label">Sed vehicula elementum</span></span></li>
-							<li><span class="icon fa-cloud"><span class="label">Elit fusce consequat</span></span></li>
-							<li><span class="icon fa-code"><span class="label">Lorem nullam tempus</span></span></li>
-							<li><span class="icon fa-desktop"><span class="label">Adipiscing amet sapien</span></span></li>
-						</ul>
-					</section>
-				</div>
-			</section>
+      <!-- <section id="two" class="wrapper">
+        <div class="inner alt">
+          <section class="spotlight">
+            <div class="image"><img src="images/pic01.jpg" alt="" /></div>
+            <div class="content">
+              <h3>Magna sed ultrices</h3>
+              <p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+            </div>
+          </section>
+          <section class="spotlight">
+            <div class="image"><img src="images/pic02.jpg" alt="" /></div>
+            <div class="content">
+              <h3>Ultrices nullam aliquam</h3>
+              <p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+            </div>
+          </section>
+          <section class="spotlight">
+            <div class="image"><img src="images/pic03.jpg" alt="" /></div>
+            <div class="content">
+              <h3>Aliquam sed magna</h3>
+              <p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+            </div>
+          </section>
+          <section class="special">
+            <ul class="icons labeled">
+              <li><span class="icon fa-camera-retro"><span class="label">Ipsum lorem accumsan</span></span></li>
+              <li><span class="icon fa-refresh"><span class="label">Sed vehicula elementum</span></span></li>
+              <li><span class="icon fa-cloud"><span class="label">Elit fusce consequat</span></span></li>
+              <li><span class="icon fa-code"><span class="label">Lorem nullam tempus</span></span></li>
+              <li><span class="icon fa-desktop"><span class="label">Adipiscing amet sapien</span></span></li>
+            </ul>
+          </section>
+        </div>
+      </section> -->
 
 		<!-- Three -->
-			<section id="three" class="wrapper style2 special">
-				<header class="major">
-					<h2>Magna leo sapien gravida</h2>
-					<p>Gravida at leo elementum elit fusce accumsan dui libero, quis vehicula<br />
-					lectus ultricies eu. In convallis amet leo sapien iaculis efficitur.</p>
-				</header>
-				<ul class="actions">
-					<li><a href="#" class="button special icon fa-download">Download</a></li>
-					<li><a href="#" class="button">Learn More</a></li>
-				</ul>
-			</section>
+      <!-- <section id="three" class="wrapper style2 special">
+        <header class="major">
+          <h2>Magna leo sapien gravida</h2>
+          <p>Gravida at leo elementum elit fusce accumsan dui libero, quis vehicula<br />
+          lectus ultricies eu. In convallis amet leo sapien iaculis efficitur.</p>
+        </header>
+        <ul class="actions">
+          <li><a href="#" class="button special icon fa-download">Download</a></li>
+          <li><a href="#" class="button">Learn More</a></li>
+        </ul>
+      </section> -->
 
 		<!-- Four -->
 		<!--
@@ -419,7 +421,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-				<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
+				<p class="copyright">&copy; ClockworkMod. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
 			</footer>
 
 		<!-- Scripts -->
@@ -429,6 +431,16 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+    
+      <script>
+        $(document).ready(function() {
+          if (window.location.toString().indexOf('redirect') != -1) {
+            setTimeout(function() {
+              window.location = window.location.toString().replace('/redirect/', '/view/');
+            }, 2000)
+          }
+        })
+      </script>
 
 	</body>
 </html>
