--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
 				<div class="content">
 					<h1><a href="#">Vysor</a></h1>
 					<p>A window to your Android</p>
-					<h5>Someone is trying to share their Android screen with you.</h5>
-					<h5>Download the app and refresh this page to connect.</h5>
+					<h5 class='instructions'>Someone is trying to share their Android screen with you.</h5>
+					<h5 class='instructions2'>Download the app and refresh this page to connect.</h5>
 					<ul class="actions">
 						<li><a href="https://chrome.google.com/webstore/detail/vysor-beta/gidgenkbbabolejbgbpnhbimgjbffefm?authuser=1" class="button special icon fa-download">Download</a></li>
             <!-- <li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li> -->
@@ -435,9 +435,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
       <script>
         $(document).ready(function() {
           if (window.location.toString().indexOf('redirect') != -1) {
-            setTimeout(function() {
-              window.location = window.location.toString().replace('/redirect/', '/view/');
-            }, 2000)
+            window.location = window.location.toString().replace('/redirect/', '/view/');
+          }
+          else {
+            $('.actions').hide();
+            $('.instructions').text('Connecting to a shared Android device.');
+            $('.instructions2').text('Vysor will open automatically.');
           }
         })
       </script>
