--- a/public/index.html
+++ b/public/index.html
@@ -438,9 +438,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
             window.location = window.location.toString().replace('/redirect/', '/view/');
           }
           else {
-            $('.actions').hide();
-            $('.instructions').text('Connecting to a shared Android device.');
-            $('.instructions2').text('Vysor will open automatically.');
+            setTimeout(function() {
+              $('.actions').hide();
+              $('.instructions').text('Connecting to a shared Android device.');
+              $('.instructions2').text('Vysor will open automatically.');
+            }, 3000);
           }
         })
       </script>
