--- a/public/index.html
+++ b/public/index.html
@@ -440,11 +440,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
             }, 1000)
           }
           else {
-            // setTimeout(function() {
-            //   $('.actions').hide();
-            //   $('.instructions').text('Connecting to a shared Android device.');
-            //   $('.instructions2').text('Vysor will open automatically.');
-            // }, 3000);
+            setTimeout(function() {
+              $('.actions').hide();
+              $('.instructions').text('Connecting to a shared Android device.');
+              $('.instructions2').text('Vysor will open automatically.');
+            }, 1000);
           }
         })
       </script>
