--- a/public/index.html
+++ b/public/index.html
@@ -417,9 +417,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+          <!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
+					<li><a href="https://twitter.com/vysorapp" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+          <!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
 				</ul>
 				<p class="copyright">&copy; ClockworkMod. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
 			</footer>
