--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 					<p>A window to your Android</p>
 					<ul class="actions">
 						<li><a href="https://chrome.google.com/webstore/detail/vysor-beta/gidgenkbbabolejbgbpnhbimgjbffefm?authuser=1" class="button special icon fa-download">Download</a></li>
-            <li><a href="https://www.youtube.com/watch?v=ACRt6SHWaJU" class="button icon scrolly popup-youtube">Watch the Video</a></li>
+            <li><a href="https://www.youtube.com/watch?v=qAHTini67GA" class="button icon scrolly popup-youtube">Watch the Video</a></li>
             <li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li>
 					</ul>
 				</div>
