--- a/public/index.html
+++ b/public/index.html
@@ -33,42 +33,44 @@
 
 		<!-- One -->
       <section id="one" class="wrapper style2 special">
+        <img src='/vysor-desktop.png'></img>
         <header class="major">
-          <h2>Sed ipsum magna lorem tempus amet<br />
-          vehicula et gravida elementum</h2>
+          <h2>Vysor puts a fully controllable window of your Android on your desktop.<br />
+          An easy install Chrome app, compatible with all operating systems.</h2>
         </header>
         <ul class="icons major">
-          <li><span class="icon fa-camera-retro"><span class="label">Shoot</span></span></li>
-          <li><span class="icon fa-refresh"><span class="label">Process</span></span></li>
-          <li><span class="icon fa-cloud"><span class="label">Upload</span></span></li>
+          <li><span class="icon fa-chrome"><span class="label">Chrome</span></span></li>
+          <li><span class="icon fa-windows"><span class="label">Windows</span></span></li>
+          <li><span class="icon fa-apple"><span class="label">Apple</span></span></li>
+          <li><span class="icon fa-linux"><span class="label">Linux</span></span></li>
         </ul>
       </section>
 
 		<!-- Two -->
-      <!-- <section id="two" class="wrapper">
+      <section id="two" class="wrapper">
         <div class="inner alt">
           <section class="spotlight">
-            <div class="image"><img src="images/pic01.jpg" alt="" /></div>
+            <div class="image"><center><span class='icon fa fa-keyboard-o fa-5x'></span></center></div>
             <div class="content">
-              <h3>Magna sed ultrices</h3>
-              <p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+              <h3>Use your Keyboard</h3>
+              <p>Type like a madman on your phone using your desktop keyboard.</p>
             </div>
           </section>
           <section class="spotlight">
-            <div class="image"><img src="images/pic02.jpg" alt="" /></div>
+            <div class="image"><center><span class='icon fa fa-mouse-pointer fa-5x'></span></center></div>
             <div class="content">
-              <h3>Ultrices nullam aliquam</h3>
-              <p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+              <h3>Point and Click</h3>
+              <p>Point, click, scroll. Your mouse works too.</p>
             </div>
           </section>
           <section class="spotlight">
-            <div class="image"><img src="images/pic03.jpg" alt="" /></div>
+            <div class="image"><center><span class='icon fa fa-android fa-5x'></span></center></div>
             <div class="content">
-              <h3>Aliquam sed magna</h3>
-              <p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+              <h3>Ditch the Emulator</h3>
+              <p>Are you an Android developer? Vysor gives you the integration and ease of an emulator without any of the trade offs.</p>
             </div>
           </section>
-          <section class="special">
+          <!-- <section class="special">
             <ul class="icons labeled">
               <li><span class="icon fa-camera-retro"><span class="label">Ipsum lorem accumsan</span></span></li>
               <li><span class="icon fa-refresh"><span class="label">Sed vehicula elementum</span></span></li>
@@ -76,9 +78,9 @@
               <li><span class="icon fa-code"><span class="label">Lorem nullam tempus</span></span></li>
               <li><span class="icon fa-desktop"><span class="label">Adipiscing amet sapien</span></span></li>
             </ul>
-          </section>
+          </section> -->
         </div>
-      </section> -->
+      </section>
 
 		<!-- Three -->
       <!-- <section id="three" class="wrapper style2 special">
