--- a/public/index.html
+++ b/public/index.html
@@ -63,11 +63,27 @@
               <p>Point, click, scroll. Your mouse works too.</p>
             </div>
           </section>
+
+        </div>
+      </section>
+
+		<!-- Two -->
+      <section id="three" class="wrapper style2 special">
+        <div class="inner alt">
+					<h2>Developers</h2>
+          <img src='/androidstudio.png'></img>
           <section class="spotlight">
             <div class="image"><center><span class='icon fa fa-android fa-5x'></span></center></div>
             <div class="content">
               <h3>Ditch the Emulator</h3>
               <p>Are you an Android developer? Vysor gives you the integration and ease of an emulator without any of the trade offs.</p>
+            </div>
+          </section>
+          <section class="spotlight">
+            <div class="image"><center><span class='icon fa fa-share-alt-square fa-5x'></span></center></div>
+            <div class="content">
+              <h3>Share Devices</h3>
+              <p>Share your device, across the office, or across the globe. Screen and ADB access to remote devices.</p>
             </div>
           </section>
           <!-- <section class="special">
