--- a/public/index.html
+++ b/public/index.html
@@ -76,14 +76,14 @@
             <div class="image"><center><span class='icon fa fa-android fa-5x'></span></center></div>
             <div class="content">
               <h3>Ditch the Emulator</h3>
-              <p>Are you an Android developer? Vysor gives you the integration and ease of an emulator without any of the trade offs.</p>
+              <p>Are you an Android developer? Vysor gives you the integration and ease of an emulator on a physical device.</p>
             </div>
           </section>
           <section class="spotlight">
             <div class="image"><center><span class='icon fa fa-share-alt-square fa-5x'></span></center></div>
             <div class="content">
-              <h3>Share Devices</h3>
-              <p>Share your device, across the office, or across the globe. Screen and ADB access to remote devices.</p>
+              <h3>Vysor Share</h3>
+              <p>Share your device, across the office, or across the globe. Screen and ADB access to remote devices. Simple as sending a link.</p>
             </div>
           </section>
           <!-- <section class="special">
