--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
             <div class="image"><center><span class='icon fa fa-keyboard-o fa-5x'></span></center></div>
             <div class="content">
               <h3>Use your Keyboard</h3>
-              <p>Type like a madman on your phone using your desktop keyboard.</p>
+              <p>Type a hundred words per minute on your phone using your desktop keyboard.</p>
             </div>
           </section>
           <section class="spotlight">
