--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 
 		<!-- One -->
       <section id="one" class="wrapper style2 special">
-        <img src='/vysor-desktop.png'></img>
+        <img src='/vysor-desktop.png' style='width=100%;'></img>
         <header class="major">
           <h2>Vysor puts a fully controllable window of your Android on your desktop.<br />
           An easy install Chrome app, compatible with all operating systems.</h2>
