--- a/public/share/index.html
+++ b/public/share/index.html
@@ -24,10 +24,10 @@
 					<h5 class='instructions'>This link has been copied to your clipboard. Send it to someone to share your device.</h5>
           <input type='text' id='vysor-link'></input>
           <br/>
-					<h5 class='instructions'>Sending this link will allow:</h5>
+					<h5 class='instructions'>Sending this link to someone will let them:</h5>
           <ul>
-            <li>Viewing and clicking your Android screen</li>
-            <li>Remote ADB Access</li>
+            <li>View and click your Android screen</li>
+            <li>Use ADB to install and debug apps</li>
           </ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/screen.png" alt="" /></div></div>
