--- a/public/share/index.html
+++ b/public/share/index.html
@@ -28,6 +28,7 @@
           <ul>
             <li>View and click your Android screen</li>
             <li>Use ADB to install and debug apps</li>
+            <li>Your device may only be shared to one person at a time</li>
           </ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/screen.png" alt="" /></div></div>
