--- a/public/app/screen.html
+++ b/public/app/screen.html
@@ -125,6 +125,7 @@
       <span class='topbuttonbar'>
         <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
           <div class="btn-group btn-group-xs" role="group" aria-label="First group">
+            <button id='fullscreen-button' type="button" class="btn btn-default" title="Full Screen"><span class='fa fa-arrows-alt'></span></button>
             <button id='softkey-button' type="button" class="btn btn-default" title="Toggle Soft Input Panel"><span class='fa fa-keyboard-o'></span></button>
             <button id='screenshot-button' type="button" class="btn btn-default" title="Take Screenshot"><span class='fa fa-camera'></span></button>
           </div>
