--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,29 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
     <meta name="google-site-verification" content="NMNRE8QlDFmRd0I0WIY4eVyfE7SohaXJxJ73oGc-8fo" />
+    <style>
+    .wrapper.style2 .image {
+      box-shadow : none
+    }
+    .spotlight .image {
+      box-shadow : none
+    }
+    .blue-icon {
+      color: #4A98E5;
+    }
+    table tbody tr:nth-child(2n + 1) {
+        background-color: transparent;
+    }
+    table tbody td:nth-child(3) {
+        background-color: rgba(144, 144, 144, 0.075);
+    }
+    table tbody th:nth-child(3) {
+        background-color: rgba(144, 144, 144, 0.075);
+    }
+    table tbody td:nth-child(2), table tbody td:nth-child(3), table thead tr th:nth-child(2), table thead tr th:nth-child(3) {
+      text-align: center;
+    }
+    </style>
 	</head>
 	<body id="top">
 
@@ -95,6 +118,70 @@
               <li><span class="icon fa-desktop"><span class="label">Adipiscing amet sapien</span></span></li>
             </ul>
           </section> -->
+        </div>
+      </section>
+
+			<section id="pricing" class="wrapper">
+				<div class="inner">
+					<header class="major">
+						<h2>Pricing</h2>
+					</header>
+
+          <section>
+            <div class="table-wrapper">
+              <table class="alt">
+                <thead>
+                  <tr>
+                    <th></th>
+                    <th width='20%'>Vysor</th>
+                    <th width='20%'>Vysor Pro</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Mirror and Control Android</td>
+                    <td><span class="blue-icon fa fa-check"></span></td>
+                    <td><span class="blue-icon fa fa-check"></span></td>
+                  </tr>
+                  <tr>
+                    <td>Screenshots</td>
+                    <td><span class="blue-icon fa fa-check"></span></td>
+                    <td><span class="blue-icon fa fa-check"></span></td>
+                  </tr>
+                  <tr>
+                    <td>High Quality Mirroring</td>
+                    <td></td>
+                    <td><span class="blue-icon fa fa-check"></span></td>
+                  </tr>
+                  <tr>
+                    <td>Fullscreen Mode</td>
+                    <td></td>
+                    <td><span class="blue-icon fa fa-check"></span></td>
+                  </tr>
+                  <tr>
+                    <td>Vysor Share</td>
+                    <td></td>
+                    <td><span class="blue-icon fa fa-check"></span></td>
+                  </tr>
+                  <tr>
+                    <td>Drag and Drop Files</td>
+                    <td></td>
+                    <td><span class="blue-icon fa fa-check"></span></td>
+                  </tr>
+                  <tr>
+                    <td>Access to <b>all</b> future features</td>
+                    <td></td>
+                    <td><span class="blue-icon fa fa-check"></span></td>
+                  </tr>
+                </tbody>
+                <tfoot>
+                  <tr>
+                    <td colspan="3" style='text-align: right;'>$1.99/mo or $9.99/yr</td>
+                  </tr>
+                </tfoot>
+              </table>
+            </div>
+          </section> 
         </div>
       </section>
 
