--- a/public/app/list.html
+++ b/public/app/list.html
@@ -58,6 +58,12 @@
                 <span><span class='glyphicon glyphicon-shopping-cart' style='color: #34C109;'></span><a id='used'>Support Vysor. Go Pro.</a></span>
                 </center>
               </div>
+              <div id='login-container' style='margin-bottom: 40px'>
+                <center>
+                <div id='login-line'><a id='login'>Login</a> to use your purchase offline.</a></div>
+                <div id='logging-in'>Logging in...</a></div>
+                </center>
+              </div>
               <div id='connect-automatically'>
                 <label class="checkbox-label"><input type="checkbox" name="connect-automatically" value="1" id='connect-automatically-check'/> Start automatically</label>
               </div>
