--- a/public/app/screen.html
+++ b/public/app/screen.html
@@ -167,7 +167,7 @@
       <img src='dead-mac.png'>
     </div>
     <div class='overlay' id='drag'>
-        <span id='bottom-back' class='fa fa-5x fa-upload'></span>
+        <span class='fa fa-5x fa-upload'></span>
     </div>
     <div class='overlay' id='loading' style='display: block; width: 100%; height: 100%;'>
       <div style='margin-top: 48px; color: #fff;'><center id='loading-text'>Connecting...</center></div>
