--- a/public/app/list.html
+++ b/public/app/list.html
@@ -2,101 +2,124 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Vysor</title>
-    <script src='common/jquery-2.1.1.min.js'></script>
-    <link href='font/font.css' rel='stylesheet' type='text/css'>
+    <title>
+      Vysor
+    </title>
+    <script src='common/jquery-2.1.1.min.js' type="text/javascript">
+</script>
+    <link href='font/font.css' rel='stylesheet' type='text/css'><!-- Bootstrap -->
 
-    <!-- Bootstrap -->
-    <script src='list.js'></script>
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="cover.css" rel="stylesheet">
+    <script src='list.js' type="text/javascript">
+</script>
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <script src="common/jquery-2.1.1.min.js" type="text/javascript">
+</script><!-- Include all compiled plugins (below), or include individual files as needed -->
+
+    <script src="bootstrap/js/bootstrap.min.js" type="text/javascript">
+</script><!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <link href="list.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-
-    <div class="site-wrapper">
-
-      <div class="site-wrapper-inner">
-
-        <div class="cover-container">
-
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand" id='vysor-title'>Vysor Beta</h3>
-              <ul class="nav masthead-nav">
-                <!-- <li class="active"><a href="#" id='toggle-server'>Kill Server</a></li> -->
-                <!-- <li class="active"><a href="#" id='connect-android'>Select Android USB</a></li> -->
-                <!-- <li class="active"><a href="#" id='refresh-devices'>Refresh Devices</a></li> -->
-              </ul>
-            </div>
-          </div>
-
-          <div id='devices-header' class="cover">
-            <!--<h1 class="cover-heading">Connected Devices</h1>-->
-            <div id='devices-list'>
-              <div id='choose-header' class='list-header'>Choose a device</div>
-              <ul  id='devices' class="nav devices-nav">
-              </ul>
-            </div>
-            <p class="lead" id='find'>
-            <a href="#" class="btn btn-lg btn-default" id='connect-android'>Find Devices</a>
-            </p>
-          </div>
-
-          <div class="mastfoot">
-            <div class="inner">
-              <div id='purchase' style='margin-bottom: 40px'>
-                <center>
-                <span><span class='glyphicon glyphicon-shopping-cart' style='color: #34C109;'></span><a id='used'>Support Vysor. Go Pro.</a></span>
-                </center>
-              </div>
-              <div id='login-container' style='margin-bottom: 40px'>
-                <center>
-                <div id='login-line'><a id='login'>Login</a> to use your purchase offline.</a></div>
-                <div id='logging-in'>Logging in...</a></div>
-                </center>
-              </div>
-              <div id='connect-automatically'>
-                <label class="checkbox-label"><input type="checkbox" name="connect-automatically" value="1" id='connect-automatically-check'/> Start automatically</label>
-              </div>
-
-              <div>
-                <label>
-                  Image Quality
-                  <select class="form-control" style='width: 300px; display: inline;' id='bitrate'>
-                    <option>500Kbps (fast, low quality)</option>
-                    <option>750Kbps</option>
-                    <option>1Mbit</option>
-                    <option>1.5Mbit</option>
-                    <option>2Mbit (slow, high quality)</option>
-                  </select> 
-                </label>     
-              </div>
-              <p id='not-found'>Android not found? Make sure <a href='https://www.youtube.com/watch?v=Ucs34BkfPB0&feature=youtu.be' target='_blank'>Android USB Debugging is enabled</a>.</p>
-              <p id='windows'>Windows users need <a href='http://koush.com/post/universal-adb-driver' target='_blank'>ADB Drivers</a>.</p>
-              <p id='adb-server-status'></p>
-              <p><a href="https://plus.google.com/110558071969009568835/posts/1uS4nfW7xhp" target='_blank'>Troubleshooting and Support.</a> <a id='reload-vysor' href='#'>Reload Vysor.</a></p>
-              <p>Created by <a href="http://twitter.com/koush" target='_blank'>@koush</a>. Version <span id='vysor-version'></span>.</p>
-            </div>
-          </div>
-
+    <div class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Vysor</a>
         </div>
-
       </div>
-
     </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="common/jquery-2.1.1.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="common/list.js"></script>
+    <div id='site-wrapper'>
+      <h5 id='choose-header' class='list-header'>
+        Choose a device
+      </h5>
+      <div id='devices' class="list-group"></div>
+      <p class="lead" id='find'>
+        <a href="#" class="btn btn-lg btn-default" id='connect-android' name="connect-android">Find Devices</a>
+      </p>
+      <div id='farms-list'>
+      </div>
+      <h5>
+        Settings
+      </h5>
+      <div class='well'>
+        <form class='form-horizontal'>
+          <div id='connect-automatically' class='form-group'>
+            <label class='col-sm-3 control-label'>Start automatically</label>
+            <div class='col-sm-6 checkbox'>
+              <input type="checkbox" name="connect-automatically" value="1" id='connect-automatically-check'>
+            </div>
+          </div>
+          <div class='form-group'>
+            <label class='col-sm-3 control-label'>Image Quality</label>
+            <div class='col-sm-6'>
+              <select class="form-control" style='' id='bitrate'>
+                <option>
+                  500Kbps (fast, low quality)
+                </option>
+                <option>
+                  750Kbps
+                </option>
+                <option>
+                  1Mbit
+                </option>
+                <option>
+                  1.5Mbit
+                </option>
+                <option>
+                  2Mbit (slow, high quality)
+                </option>
+              </select>
+            </div>
+          </div>
+          <div id='share-all' class='form-group'>
+            <label class='col-sm-3 control-label'>Share All Devices</label>
+            <div class='col-sm-6 checkbox'>
+              <input type="checkbox" name="share-all" value="1" id='share-all-check'>
+            </div>
+          </div>
+        </form>
+      </div>
+      <h5>
+        Status
+      </h5>
+      <div class='well'>
+        <div id='purchase'>
+          <p>
+            <span class='glyphicon glyphicon-shopping-cart' style='color: #34C109;'>&nbsp;</span><a id='used' name="used">Support Vysor. Go Pro.</a>
+          </p>
+        </div>
+        <div id='login-container'>
+          <p id='login-line'>
+            <a id='login' name="login">Login</a> to use your purchase offline.
+          </p>
+          <p id='logging-in'>
+            Logging in...
+          </p>
+        </div>
+        <p id='not-found'>
+          Android not found? Make sure <a href='https://www.youtube.com/watch?v=Ucs34BkfPB0&amp;feature=youtu.be' target='_blank'>Android USB Debugging is enabled</a>.
+        </p>
+        <p id='windows'>
+          Windows users need <a href='http://koush.com/post/universal-adb-driver' target='_blank'>ADB Drivers</a>.
+        </p>
+        <p id='vysor-share-server-status'></p>
+        <p id='adb-server-status'></p>
+      </div>
+      <div class="navbar navbar-default navbar-fixed-bottom">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-text" href="https://twitter.com/vysorapp" target="_blank">@vysorapp</a>
+            <p class="navbar-text">
+              Version <span id="vysor-version"></span>
+            </p><a class="navbar-text" href="https://plus.google.com/110558071969009568835/posts/1uS4nfW7xhp" target='_blank'>Troubleshooting and Support</a> <a id='reload-vysor' class="navbar-text" href='#' name="reload-vysor">Reload Vysor</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
