--- a/public/server/index.html
+++ b/public/server/index.html
@@ -21,8 +21,8 @@
 				<div class="content">
 					<h1><a href="#">Vysor</a></h1>
 					<p>A window to your Android</p>
-					<h5 class='instructions'>Someone is trying to share their Android screen with you.</h5>
-					<h5 class='instructions2'>Open this link in Chrome or download the Vysor Chrome app to connect.</h5>
+					<h5 class='instructions'>Someone is trying to share their Android devices with you.</h5>
+					<h5 class='instructions2'>Download the Vysor Chrome app to connect.</h5>
 					<ul class="actions">
 						<li><a href="https://chrome.google.com/webstore/detail/vysor-beta/gidgenkbbabolejbgbpnhbimgjbffefm?authuser=1" class="button special icon fa-download">Download Vysor</a></li>
             <!-- <li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li> -->
@@ -51,18 +51,15 @@
     
       <script>
         $(document).ready(function() {
-          if (window.location.toString().indexOf('redirect') != -1) {
+          if (window.location.toString().indexOf('server') != -1) {
             // after a second, redirect to trigger vysor
             setTimeout(function() {
-              if (navigator.userAgent.indexOf('Chrome') == -1)
-                window.location = window.location.toString().replace('/redirect/', '/view/');
-              else
-                window.location = window.location.toString().replace('/redirect/', '/app/vysor');
+              window.location = window.location.toString().replace('/server/', '/redirects/');
 
               // still here? vysor is installed!
               setTimeout(function() {
                 $('.actions').hide();
-                $('.instructions').text('Connecting to a shared Android device.');
+                $('.instructions').text('Connecting to shared Android devices.');
                 $('.instructions2').text('Vysor will open automatically.');
               }, 1000);
             }, 1000)
