--- a/public/app/list.html
+++ b/public/app/list.html
@@ -7,22 +7,17 @@
     </title>
     <script src='common/jquery-2.1.1.min.js' type="text/javascript">
 </script>
+
     <link href='font/font.css' rel='stylesheet' type='text/css'><!-- Bootstrap -->
 
-    <script src='list.js' type="text/javascript">
-</script>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
-    <script src="common/jquery-2.1.1.min.js" type="text/javascript">
-</script><!-- Include all compiled plugins (below), or include individual files as needed -->
-
     <script src="bootstrap/js/bootstrap.min.js" type="text/javascript">
-</script><!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+</script>
+
+        <script src='list.js' type="text/javascript">
+    </script>
+    
     <link href="list.css" rel="stylesheet" type="text/css">
   </head>
   <body>
@@ -108,8 +103,10 @@
           Windows users need <a href='http://koush.com/post/universal-adb-driver' target='_blank'>ADB Drivers</a>.
         </p>
         <p id='vysor-share-server-status'></p>
+        <p id='whitelist-count'><a href='#'></a></p>
         <p id='adb-server-status'></p>
       </div>
+      <div class='this-pads-the-footer-so-it-scrolls' style='min-height: 50px'></div>
       <div class="navbar navbar-default navbar-fixed-bottom">
         <div class="container-fluid">
           <div class="navbar-header">
