--- a/public/app/whitelist.html
+++ b/public/app/whitelist.html
@@ -42,8 +42,8 @@
     <textarea class="form-control"></textarea>
     <div class="navbar navbar-default navbar-fixed-bottom">
       <div class="container-fluid">
-        <div class='collapse navbar-collapse'>
-        <p class="navbar-text"><a class="navbar-link" href="#" id='save'>Save</a></p>
+        <div class='navbar-header'>
+          <a class="navbar-text" href="#" id='save'>Save</a>
         </div>
       </div>
     </div>
