--- a/public/index.html
+++ b/public/index.html
@@ -176,7 +176,7 @@
                 </tbody>
                 <tfoot>
                   <tr>
-                    <td colspan="3" style='text-align: right;'>$1.99/mo or $9.99/yr</td>
+                    <td colspan="3" style='text-align: right;'>$1.99/mo, $9.99/yr, or $39.99/lifetime</td>
                   </tr>
                 </tfoot>
               </table>
