--- a/public/app/list.html
+++ b/public/app/list.html
@@ -105,15 +105,14 @@
         <p id='vysor-share-server-status'></p>
         <p id='whitelist-count'><a href='#'></a></p>
         <p id='adb-server-status'></p>
+        <p id='vysor-version'></p>
       </div>
       <div class='this-pads-the-footer-so-it-scrolls' style='min-height: 50px'></div>
       <div class="navbar navbar-default navbar-fixed-bottom">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-text" href="https://twitter.com/vysorapp" target="_blank">@vysorapp</a>
-            <p class="navbar-text">
-              Version <span id="vysor-version"></span>
-            </p><a class="navbar-text" href="https://plus.google.com/110558071969009568835/posts/1uS4nfW7xhp" target='_blank'>Troubleshooting and Support</a> <a id='reload-vysor' class="navbar-text" href='#' name="reload-vysor">Reload Vysor</a>
+            <p class="navbar-text"><a href="https://twitter.com/vysorapp" target="_blank">@vysorapp</a><span> by </span><a href="https://www.clockworkmod.com/" target="_blank">ClockworkMod</a></p>
+            <a class="navbar-text" href="https://plus.google.com/110558071969009568835/posts/1uS4nfW7xhp" target='_blank'>Troubleshooting &amp; Support</a> <a id='reload-vysor' class="navbar-text" href='#' name="reload-vysor">Reload Vysor</a>
           </div>
         </div>
       </div>
