--- a/public/app/screen.html
+++ b/public/app/screen.html
@@ -117,11 +117,11 @@
     </style>
     <script src='common/jquery-2.1.1.min.js'></script>
     <script src='util.js'></script>
-    <script src='socket.js'></script>
-    <script src='fetch.js'></script>
-    <script src='filesocket.js'></script>
-    <script src='gcmsocket.js'></script>
-    <script src='adb-client.js'></script>
+    <script src='socket/socket.js'></script>
+    <script src='socket/fetch.js'></script>
+    <script src='socket/filesocket.js'></script>
+    <script src='socket/gcmsocket.js'></script>
+    <script src='adb/adb-client.js'></script>
 
     <!-- deprecated -->
     <!--
