update app and purchase flow

--- a/public/app/list.html
+++ b/public/app/list.html
@@ -43,12 +43,6 @@
       </h5>
       <div class='well'>
         <form class='form-horizontal'>
-          <div id='connect-automatically' class='form-group'>
-            <label class='col-sm-3 control-label'>Start automatically</label>
-            <div class='col-sm-6 checkbox'>
-              <input type="checkbox" name="connect-automatically" value="1" id='connect-automatically-check'>
-            </div>
-          </div>
           <div class='form-group'>
             <label class='col-sm-3 control-label'>Image Quality</label>
             <div class='col-sm-6'>
@@ -71,10 +65,22 @@
               </select>
             </div>
           </div>
+          <div id='vysor-keyboard' class='form-group'>
+            <label class='col-sm-3 control-label'>Vysor Keyboard (IME)</label>
+            <div class='col-sm-6 checkbox'>
+              <input type="checkbox" name="vysor-keyboard" value="1" id='vysor-keyboard-check'>
+            </div>
+          </div>
           <div id='share-all' class='form-group'>
             <label class='col-sm-3 control-label'>Share All Devices</label>
             <div class='col-sm-6 checkbox'>
               <input type="checkbox" name="share-all" value="1" id='share-all-check'>
+            </div>
+          </div>
+          <div id='connect-automatically' class='form-group'>
+            <label class='col-sm-3 control-label'>Start automatically</label>
+            <div class='col-sm-6 checkbox'>
+              <input type="checkbox" name="connect-automatically" value="1" id='connect-automatically-check'>
             </div>
           </div>
         </form>
@@ -112,7 +118,7 @@
         <div class="container-fluid">
           <div class="navbar-header">
             <p class="navbar-text"><a href="https://twitter.com/vysorapp" target="_blank">@vysorapp</a><span> by </span><a href="https://www.clockworkmod.com/" target="_blank">ClockworkMod</a></p>
-            <a class="navbar-text" href="https://plus.google.com/110558071969009568835/posts/1uS4nfW7xhp" target='_blank'>Troubleshooting &amp; Support</a> <a id='reload-vysor' class="navbar-text" href='#' name="reload-vysor">Reload Vysor</a>
+            <a class="navbar-text" href="https://plus.google.com/110558071969009568835/posts/1uS4nfW7xhp" target='_blank'>Support</a> <a id='reload-vysor' class="navbar-text" href='#' name="reload-vysor">Reload Vysor</a>
           </div>
         </div>
       </div>
