--- a/public/app/screen.html
+++ b/public/app/screen.html
@@ -173,7 +173,7 @@
         <span class='fa fa-5x fa-upload'></span>
     </div>
     <div class='overlay' id='loading' style='display: block; width: 100%; height: 100%;'>
-      <div style='margin-top: 48px; color: #fff; text-align: center;'>Connecting...</div>
+      <div id='loading-text' style='margin-top: 48px; color: #fff; text-align: center;'>Connecting...</div>
       <div class='loader'></div>
     </div>
     <div class='foot'>
