--- a/public/app/whitelist.html
+++ b/public/app/whitelist.html
@@ -15,6 +15,7 @@
 </script>
     <script src='farm-access.js' type="text/javascript"></script>
     <script src='whitelist.js' type="text/javascript"></script>
+    <script src='uglify-whitelist.js' type="text/javascript"></script>
     <style>
     textarea {
        position:absolute; top:50px; left:0; right:0; bottom: 50px; padding:1em;
