--- a/public/app/screen.html
+++ b/public/app/screen.html
@@ -148,6 +148,8 @@
       <span class='topbuttonbar'>
         <span class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
           <span class="btn-group btn-group-xs" role="group" aria-label="First group">
+            <button id='settings-button' type="button" class="btn btn-default" title="Settings"><span class='fa fa-gear'></span></button>
+            <button id='pin-title-button' type="button" class="btn btn-default" title="Pin Title Menu"><span class='fa fa-thumb-tack'></span></button>
             <button id='fullscreen-button' type="button" class="btn btn-default" title="Full Screen"><span class='fa fa-arrows-alt'></span></button>
             <button id='softkey-button' type="button" class="btn btn-default" title="Toggle Soft Input Panel"><span class='fa fa-keyboard-o'></span></button>
             <button id='screenshot-button' type="button" class="btn btn-default" title="Take Screenshot"><span class='fa fa-camera'></span></button>
