--- a/public/index.html
+++ b/public/index.html
@@ -159,6 +159,11 @@
                     <td><span class="blue-icon fa fa-check"></span></td>
                   </tr>
                   <tr>
+                    <td>Go Wireless</td>
+                    <td></td>
+                    <td><span class="blue-icon fa fa-check"></span></td>
+                  </tr>
+                  <tr>
                     <td>Vysor Share</td>
                     <td></td>
                     <td><span class="blue-icon fa fa-check"></span></td>
