--- a/public/app/list.html
+++ b/public/app/list.html
@@ -9,6 +9,7 @@
 </script>
 
     <link href='font/font.css' rel='stylesheet' type='text/css'><!-- Bootstrap -->
+    <link href='font-awesome/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
 
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
