--- a/public/app/purchase.html
+++ b/public/app/purchase.html
@@ -75,6 +75,11 @@
                   <td><span class="blue-icon fa fa-check"></span></td>
                 </tr>
                 <tr>
+                  <td>Go Wireless</td>
+                  <td></td>
+                  <td><span class="blue-icon fa fa-check"></span></td>
+                </tr>
+                <tr>
                   <td>Vysor Share</td>
                   <td></td>
                   <td><span class="blue-icon fa fa-check"></span></td>
