--- a/public/index.html
+++ b/public/index.html
@@ -183,6 +183,9 @@
                   <tr>
                     <td colspan="3" style='text-align: right;'>$1.99/mo, $9.99/yr, or $39.99/lifetime</td>
                   </tr>
+                  <tr>
+                    <td colspan="3" style='text-align: right;'>Enterprise Billing is also available. <a href='https://billing.vysor.io/' style='color: #4A98E5'>Log in here.</a></td>
+                  </tr>
                 </tfoot>
               </table>
             </div>
