--- a/public/app/list.html
+++ b/public/app/list.html
@@ -8,7 +8,7 @@
     <script src='common/jquery-2.1.1.min.js' type="text/javascript">
 </script>
 
-    <link href='font/font.css' rel='stylesheet' type='text/css'><!-- Bootstrap -->
+    <link href='font/font.css' rel='stylesheet' type='text/css'>
     <link href='font-awesome/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
 
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
