--- a/public/app/purchase.html
+++ b/public/app/purchase.html
@@ -132,5 +132,6 @@
         </div>
       </div>
     </section>
+    <a id='retrieve' class='btn btn-primary' style='float: right;'>Retrieve License</a>
   </body>
 </html>
