make it look less shitty

--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,14 @@
     .navbar-inverse .navbar-nav>li>a {
       color: white;
     }
+    
+    h1, h2, h3, h4, h5, h6 {
+      color: #828282;
+    }
+    
+    body {
+      color: #999999;
+    }
     </style>
 	</head>
 	<body id="top">
@@ -97,8 +105,10 @@
       <section id="one" class="wrapper style2 special">
         <img src='/vysor-desktop.jpg' style='width: 100%;'></img>
         <header class="major">
-          <h2>Vysor puts a fully controllable window of your Android on your desktop.<br />
-          An easy install Chrome app, compatible with all operating systems.</h2>
+          <h2>Vysor puts your Android on your desktop.<br /></h2>
+          <h3>
+          Use apps, play games, control your Android.<br /></h3>
+          <h4>An easy install Chrome app, compatible with all operating systems.</h4>
         </header>
         <ul class="icons major">
           <li><span class="icon fa-chrome"><span class="label">Chrome</span></span></li>
