--- a/public/server/index.html
+++ b/public/server/index.html
@@ -13,6 +13,20 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+    <script>
+    function fallbackInstall() {
+      window.location = 'https://chrome.google.com/webstore/detail/vysor-beta/gidgenkbbabolejbgbpnhbimgjbffefm?authuser=1'
+    }
+    function tryInlineInstall() {
+      if (!window.chrome || !window.chrome.webstore || !window.chrome.webstore.install)
+        return fallbackInstall();
+      
+      chrome.webstore.install('https://chrome.google.com/webstore/detail/gidgenkbbabolejbgbpnhbimgjbffefm',
+      function() {
+        
+      }, fallbackInstall)
+    }
+    </script>
 	</head>
 	<body id="top">
 
@@ -24,7 +38,7 @@
 					<h5 class='instructions'>Someone is trying to share their Android devices with you.</h5>
 					<h5 class='instructions2'>Download the Vysor Chrome app to connect.</h5>
 					<ul class="actions">
-						<li><a href="https://chrome.google.com/webstore/detail/vysor-beta/gidgenkbbabolejbgbpnhbimgjbffefm?authuser=1" class="button special icon fa-download">Download Vysor</a></li>
+						<li><a href="javascript:tryInlineInstall()" class="button special icon fa-download">Install Vysor</a></li>
             <!-- <li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li> -->
 					</ul>
 				</div>
