--- a/public/app/list.html
+++ b/public/app/list.html
@@ -8,7 +8,6 @@
     <script src='common/jquery-2.1.1.min.js' type="text/javascript">
 </script>
 
-    <link href='font/font.css' rel='stylesheet' type='text/css'>
     <link href='font-awesome/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
 
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -119,7 +118,9 @@
         <div class="container-fluid">
           <div class="navbar-header">
             <p class="navbar-text"><a href="https://twitter.com/vysorapp" target="_blank">@vysorapp</a><span> by </span><a href="https://www.clockworkmod.com/" target="_blank">ClockworkMod</a></p>
-            <a class="navbar-text" href="https://plus.google.com/110558071969009568835/posts/1uS4nfW7xhp" target='_blank'>Support</a> <a id='reload-vysor' class="navbar-text" href='#' name="reload-vysor">Reload Vysor</a>
+            <a class="navbar-text" href="https://plus.google.com/110558071969009568835/posts/1uS4nfW7xhp" target='_blank'>Support</a>
+            <a id='tutorial' class="navbar-text" href="#">Tutorial</a>
+            <a id='reload-vysor' class="navbar-text" href='#' name="reload-vysor">Reload Vysor</a>
           </div>
         </div>
       </div>
