always open the chrome store link even after successful instal

--- a/public/server/index.html
+++ b/public/server/index.html
@@ -22,9 +22,7 @@
         return fallbackInstall();
       
       chrome.webstore.install('https://chrome.google.com/webstore/detail/gidgenkbbabolejbgbpnhbimgjbffefm',
-      function() {
-        
-      }, fallbackInstall)
+      fallbackInstall, fallbackInstall)
     }
     </script>
 	</head>
